# eshop-product-service

./: .gitignore  Cargo.toml  Dockerfile  README.md  eshop-compose.yaml
.cargo/: config.toml
.github/workflows/: eshop-product-service-ci.yaml
src/: auth.rs  cqrs.rs  domain.rs  dtos.rs  events.rs  main.rs  metrics.rs  repositories.rs  routes.rs  state.rs  uow.rs
