[package]
name = "eshop-products"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde_json = "1.0.139"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
amqprs = "2.1.0"
tower-http = { version = "0.6.2", features = ["full"] }
tower = "0.5.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.13.1", features = ["v4"]}
mongodb = "3.2.1"
futures-util = "0.3"
async-trait = "0.1.87"